filling the repo

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 /assets/opensearch/data/os03data/*
 /assets/opensearch/data/os04data/*
 /assets/opensearch/data/os05data/*
+cluster-opensearch.code-workspace
